ヘッダー編集

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,8 +11,10 @@
   </head>
   <body>
     <header>
+      <h1>
+        <a href=""><img src="/logo.png" ></a>
+      </h1>
       <nav>
-        
       </nav>
     </header>
     <%= yield %>
