--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,9 +12,23 @@
   <body>
     <header>
       <h1>
-        <a href=""><img src="/logo.png" ></a>
+        <a href="/"><img src="/logo.png"></a>
       </h1>
       <nav>
+        <ul class="nav">
+          <li class="nav-list">
+            <a href="#portfolio">Portfolio</a>
+          </li>
+          <li class="nav-list">
+            <a href="#feature">Feature</a>
+          </li>
+          <li class="nav-list">
+            <a href="#profile">Profile</a>
+          </li>
+          <li class="nav-list">
+            <a href="#contact">Contact</a>
+          </li>
+        </ul>
       </nav>
     </header>
     <%= yield %>
