メインビジュアル作成

--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -1,2 +1,8 @@
-<h1>Homes#top</h1>
-<p>Find me in app/views/homes/top.html.erb</p>
+
+
+<section id="mv">
+  <div container>
+    <h1 class="mv-title">Lorem Ipsum</h1>
+    <p class="mv-text">simply dummy text of the printing</p>
+  </div>
+</section>
