--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -22,10 +22,12 @@
 
   header{
     height: 70px;
+    width: 100%;
     background-color: #EC715F;
   }
 
   .header-group{
+    height: 70px;
     width: 1024px;
     display: flex;
     justify-content: space-between;
@@ -33,6 +35,7 @@
 
   .nav{
     display: flex;
+    height: 70px;
     list-style: none;
   }
 
@@ -44,4 +47,14 @@
 
   a{
     text-decoration: none;
+  }
+
+  #mv{
+    width: 100%;
+    height: 650px;
+    background-image: url(mv.png);
+    color: #FFFFFF;
+    text-align: center;
+    background: cover;
+    background-position: center;
   }
