--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>My_Site</title>
-    <meta name="viewport" content="width=device-width,initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
@@ -12,30 +12,40 @@
   </head>
   <body>
     <header>
-      <div class="container header-group">
+      <div class="header-group">
         <h1>
-          <a href="/">
+          <a href="#mv">
             <img src="/logo.png">
           </a>
         </h1>
-        <nav>
-          <ul class="nav">
-            <li class="nav-list">
-              <a href="#portfolio">Portfolio</a>
-            </li>
-            <li class="nav-list">
-              <a href="#feature">Feature</a>
-            </li>
-            <li class="nav-list">
-              <a href="#profile">Profile</a>
-            </li>
-            <li class="nav-list">
-              <a href="#contact">Contact</a>
-            </li>
-          </ul>
+        <nav class="navbar navbar-expand-lg navbar-light">
+          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNavDropdown">
+            <ul class="nav">
+              <li class="nav-list">
+                <a href="#portfolio">Portfolio</a>
+              </li>
+              <li class="nav-list">
+                <a href="#feature">Feature</a>
+              </li>
+              <li class="nav-list">
+                <a href="#profile">Profile</a>
+              </li>
+              <li class="nav-list">
+                <a href="#contact">Contact</a>
+              </li>
+            </ul>
+          </div>
         </nav>
       </div>
     </header>
-    <%= yield %>
+    <main>
+      <%= yield %>
+    </main>
+    <footer>
+
+    </footer>
   </body>
 </html>
