フォントサイズ変更

--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -1,7 +1,5 @@
-
-
 <section id="mv">
-  <div container>
+  <div class="container">
     <h1 class="mv-title">Lorem Ipsum</h1>
     <p class="mv-text">simply dummy text of the printing</p>
   </div>
