フォントサイズ変更

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -60,6 +60,11 @@
   }
 
   .mv-title{
-    font-size: 20px;
+    font-size: 64px;
     padding-top: 200px;
+  }
+
+  .mv-text{
+    font-size: 20;
+    padding-top: 10px;
   }
