--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,16 +12,16 @@
   </head>
   <body>
     <header>
-      <div class="header-group">
+      <div class="container header-group">
         <h1>
           <a href="#mv">
-            <img src="/logo.png">
+            <img class="logo" src= "img/logo.png" alt="ロゴ">
           </a>
         </h1>
         <nav class="navbar navbar-expand-lg navbar-light">
-          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
+          <!--<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">-->
+          <!--  <span class="navbar-toggler-icon"></span>-->
+          <!--</button>-->
           <div class="collapse navbar-collapse" id="navbarNavDropdown">
             <ul class="nav">
               <li class="nav-list">
