--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -72,7 +72,7 @@
     background-image: url(mv.png);
     color: #FFFFFF;
     text-align: center;
-    background: cover;
+    background-size: cover;
     background-position: center;
   }
 
@@ -84,4 +84,70 @@
   .mv-text{
     font-size: 20;
     padding-top: 10px;
+  }
+
+  #portfolio{
+    background-color: #ECEFF1;
+  }
+
+  .heading{
+    text-align: center;
+    padding-top: 90px;
+    font-size: 32px;
+    color: #000000;
+  }
+
+  .heading::after{
+    content: "";
+    height: 3px;
+    width: 70px;
+    display: block;
+    margin: 8px auto 0 auto;
+    background-color: #EC715F;
+  }
+
+  .heading-text{
+    padding-top: 30px;
+    font-size: 16px;
+    text-align: center;
+  }
+
+  .production-group{
+    display: flex;
+    flex-flow: row wrap;
+    width: 920px;
+    padding: 30px 0 90px 0;
+    margin: 0 auto;
+  }
+
+  .production{
+    width: 300px;
+    height: 250px;
+    margin: 10px 10px 0 0;
+    background-size: cover;
+    background-position: center;
+  }
+
+  .bg-1{
+    background-image: url(sketch.jpg);
+  }
+
+  .bg-2{
+    background-image: url(websuku.png);
+  }
+
+  .bg-3{
+    background-image: url(write.jpg);
+  }
+
+  .bg-4{
+    background-image: url(webcamp.png);
+  }
+
+  .bg-5{
+    background-image: url(talk.jpg);
+  }
+
+  .bg-6{
+    background-image: url(webcamp-mother.png);
   }
