--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -114,10 +114,19 @@
 
   .production-group{
     display: flex;
-    flex-flow: row wrap;
+    flex-direction: row;
+    flex-wrap: wrap;
     width: 920px;
     padding: 30px 0 90px 0;
     margin: 0 auto;
+  }
+
+  .production:nth-child(3n){
+    margin-right: 0;
+  }
+
+  .production:nth-child(-n+3){
+    margin-top: 0;
   }
 
   .production{
