--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -54,7 +54,7 @@
   }
 
   .nav-list{
-    height: 120px;
+    width: 120px;
     line-height: 70px;
     padding: 0 30px;
     font-size: 16px;
@@ -82,7 +82,7 @@
   }
 
   .mv-text{
-    font-size: 20;
+    font-size: 20px;
     padding-top: 10px;
   }
 
