--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,16 +13,15 @@
   <body>
     <header>
       <div class="container header-group">
-        <h1>
-          <a href="#mv">
-            <img class="logo" src= "img/logo.png" alt="ロゴ">
-          </a>
-        </h1>
-        <nav class="navbar navbar-expand-lg navbar-light">
+        <a href="#mv">
+          <img class="logo" src= "img/logo.png" alt="ロゴ">
+        </a>
+        <!--<nav class="navbar navbar-expand-lg navbar-light">-->
           <!--<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">-->
           <!--  <span class="navbar-toggler-icon"></span>-->
           <!--</button>-->
-          <div class="collapse navbar-collapse" id="navbarNavDropdown">
+        <!--  <div class="collapse navbar-collapse" id="navbarNavDropdown">-->
+          <nav>
             <ul class="nav">
               <li class="nav-list">
                 <a href="#portfolio">Portfolio</a>
