--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -160,3 +160,27 @@
   .bg-6{
     background-image: url(webcamp-mother.png);
   }
+
+  .strength-group{
+    display: flex;
+    width: 980px;
+    padding: 30px 0 90px 0;
+    margin:  0 auto;
+  }
+
+  .strength{
+    width: 320px;
+    margin-right: 10px;
+    text-align: center;
+    font-size: 60px;
+  }
+
+  .strength-title{
+    padding: 10px 0;
+    font-size: 20px;
+  }
+  
+  .strength-text{
+    text-align: left;
+    font-size: 16px;
+  }
