--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -24,5 +24,41 @@
   </div>
 </section>
 <section id="feature">
-
+  <div class="container">
+    <div class="heading">Feature</div>
+    <p class="heading-text">
+      It is a long established fact that a reader will be distracted by the readable</br>
+      content of a page when looking at its layout.</br>
+      The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters</br>
+    </p>
+    <div class="strength-group">
+      <div class="strength">
+        <i class="fa fa-code"></i>
+        <h3 class="strength-title">Strength1</h3>
+        <div class="strength-text">
+          Contrary to popular belief, Lorem Ipsum is not simply random text.
+          It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock,
+          a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur
+        </div>
+      </div>
+      <div class="strength">
+        <i class="fa fa-code"></i>
+        <h3 class="strength-title">Strength2</h3>
+        <div class="strength-text">
+         Contrary to popular belief, Lorem Ipsum is not simply random text.
+         It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock,
+         a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur
+        </div>
+      </div>
+      <div class="strength">
+        <i class="fa fa-code"></i>
+        <h3 class="strength-title">Strength3</h3>
+        <div class="strength-text">
+          Contrary to popular belief, Lorem Ipsum is not simply random text.
+          It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock,
+          a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur
+        </div>
+      </div>
+    </div>
+  </div>
 </section>
