--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -33,7 +33,7 @@
     </p>
     <div class="strength-group">
       <div class="strength">
-        <i class="fa fa-code"></i>
+        <i class="fa fa-code" aria-hidden="true"></i>
         <h3 class="strength-title">Strength1</h3>
         <div class="strength-text">
           Contrary to popular belief, Lorem Ipsum is not simply random text.
@@ -60,5 +60,16 @@
         </div>
       </div>
     </div>
+  </div>
+</section>
+<section id="profile">
+  <div class="container">
+    <h3 class="heading">Profile</div>
+    <p class="heading-text">
+      It is a long established fact that a reader will be distracted by the readable<br>
+      content of a page when looking at its layout.<br class="sp-none">
+      The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters
+    </p>
+    
   </div>
 </section>
