--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -70,6 +70,9 @@
       content of a page when looking at its layout.<br class="sp-none">
       The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters
     </p>
-    
+    <div class="profile-group">
+      <div class="left-content"></div>
+      <div class="right-content"></div>
+    </div>
   </div>
 </section>
