--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -71,8 +71,23 @@
       The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters
     </p>
     <div class="profile-group">
-      <div class="left-content"></div>
-      <div class="right-content"></div>
+      <div class="left-content">
+        <div class="my-face"></div>
+      </div>
+      <div class="right-content">
+        <h3 class="description-title">MyName</h3>
+        <p class="description-text">
+          Contrary to popular belief, Lorem Ipsum is not simply random<br>
+          text. It has roots in a piece of classical Latin literature from 45<br>
+          BC, making it over 2000 years old. Richard McClintock, a Latin <br>
+          professor at Hampden-Sydney College in Virginia, looked up <br>
+          one of the more obscure Latin words, consectetur
+        </p>
+        <h3 class="description-title">MySkills</h3>
+        <p class="description-text">
+          HTML/CSS,JavaScript,JQuery,PhotoShop
+        </p>
+      </div>
     </div>
   </div>
 </section>
