--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -219,3 +219,30 @@
     font-size: 16px;
     color: #000000;
   }
+
+  .contact-group{
+    display: flex;
+    width: 800px;
+    padding: 30px 0 90px 0;
+    margin: 0 auto;
+  }
+
+    .contact-group{
+    display: flex;
+    width: 800px;
+    padding: 30px 0 90px 0;
+    margin: 0 auto;
+  }
+
+    .left-contact-content{
+      width: 130px;
+      margin: 0 auto;
+    }
+
+    .right-contact-content{
+      margin: 0 auto;
+    }
+
+    .fa-brands{
+      font-size: 50px;
+    }
