--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -42,7 +42,7 @@
         </div>
       </div>
       <div class="strength">
-        <i class="fa fa-code"></i>
+        <i class="fa fa-desktop"></i>
         <h3 class="strength-title">Strength2</h3>
         <div class="strength-text">
          Contrary to popular belief, Lorem Ipsum is not simply random text.
@@ -51,7 +51,7 @@
         </div>
       </div>
       <div class="strength">
-        <i class="fa fa-code"></i>
+        <i class="fa fa-cogs"></i>
         <h3 class="strength-title">Strength3</h3>
         <div class="strength-text">
           Contrary to popular belief, Lorem Ipsum is not simply random text.
@@ -103,15 +103,17 @@
       <div class="left-content">
         <div class="left-contact-content">
           <h3 class="description-title">Mail</h3>
-          <a class="description-text link-text" href="">xxx@xxx.com</a>
+          <a class="description-text link-text" href="mailto:xxx@xxx.com">xxx@xxx.com</a>
           <h3 class="description-title">Tel</h3>
-          <a class="description-text link-text" href="">000-0000-0000</a>
+          <a class="description-text link-text" href="tel:00000000000">000-0000-0000</a>
         </div>
       </div>
       <div class="right-content">
         <div class="right-contact-content">
           <h3 class="description-title">SNS</h3>
-          <i class="fa fa-facebook fa-5x" aria-hidden="ture"></i>
+          <i class="fa-brands fa-facebook"></i>
+          <i class="fa-brands fa-twitter"></i>
+          <i class="fa-brands fa-instagram"></i>
         </div>
       </div>
     </div>
