--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -245,4 +245,18 @@
 
     .fa-brands{
       font-size: 50px;
+      margin-right: 20px;
+    }
+
+    footer{
+      background-color: #EC715F;
+      width: 100%;
+      height: 60px;
+      line-height: 60px;
+    }
+
+    .copyright{
+      font-size: 16px;
+      color: #FAFAFA;
+      text-align: center;
     }
