--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -45,7 +45,7 @@
       <%= yield %>
     </main>
     <footer>
-
+      <p class="copyright">©︎ 2017 WebCamp</p>
     </footer>
   </body>
 </html>
