--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -260,3 +260,15 @@
       color: #FAFAFA;
       text-align: center;
     }
+
+      @media screen and (max-width:767px){
+       header{
+        height: 50px;
+      }
+    }
+
+    @media screen and (max-width:767px){
+       #mv{
+        background-image: url(code.png);
+      }
+    }
