--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -261,7 +261,7 @@
       text-align: center;
     }
 
-      @media screen and (max-width:767px){
+    @media screen and (max-width:767px){
        header{
         height: 50px;
       }
@@ -270,5 +270,27 @@
     @media screen and (max-width:767px){
        #mv{
         background-image: url(code.png);
+        width: 100%;
+        height: 650px;
+      }
+    }
+
+    @media screen and (max-width:767px){
+       .container{
+        width: 90%;
+      }
+    }
+
+    @media screen and (max-width:767px){
+       .mv-title{
+        padding-top: 200px;
+        font-size: 40px;
+      }
+    }
+
+    @media screen and (max-width:767px){
+       .mv-text{
+        font-size: 18px;
+        padding-top: 10px;
       }
     }
