feature レスポンシブ対応編集

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -311,3 +311,11 @@
         display: none;
       }
     }
+
+
+    @media screen and (max-width:767px){
+      .strength-group{
+        flex-flow: row wrap;
+        width: 320px;
+      }
+    }
