--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -338,3 +338,11 @@
         width: 100%;
       }
     }
+
+    @media screen and (max-width:767px){
+      .contact-group{
+        flex-flow: row wrap;
+        text-align: center;
+        width: 100%;
+      }
+    }
