--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -102,8 +102,7 @@
     <div class="contact-group">
       <div class="left-content">
         <div class="left-contact-content">
-          <h3 class="description-title">Mail:
-          </h3>
+          <h3 class="description-title">Mail:</h3>
           <a class="description-text link-text" href="mailto:xxx@xxx.com">xxx@xxx.com</a>
           <h3 class="description-title">Tel:</h3>
           <a class="description-text link-text" href="tel:00000000000">000-1111-2222</a>
