--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,11 +18,11 @@
         <a href="#mv">
           <img class="logo" src= "img/logo.png" alt="ロゴ">
         </a>
-        <!--<nav class="navbar navbar-expand-lg navbar-light">-->
-          <!--<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">-->
-          <!--  <span class="navbar-toggler-icon"></span>-->
-          <!--</button>-->
-        <!--  <div class="collapse navbar-collapse" id="navbarNavDropdown">-->
+        <nav class="navbar navbar-expand-lg navbar-light">
+          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNavDropdown">
           <nav>
             <ul class="nav">
               <li class="nav-list">
